--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-scripts",
-  "version": "3.0.1",
-  "description": "Configuration and scripts for Create React App.",
+  "name": "@flowmagic/react-scripts",
+  "version": "1.0.0",
+  "description": "Configuration and scripts for Create React App customized to solve breaking code in flowmagic. react-scripts upstream version used 3.0.1.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/Arkanayan/create-react-app",
     "directory": "packages/react-scripts"
   },
   "license": "MIT",
@@ -12,7 +12,7 @@
     "node": ">=8.10"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/Arkanayan/create-react-app/issues"
   },
   "files": [
     "bin",
